--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".CountdownTimerApp"
         android:allowBackup="true"
@@ -28,6 +30,8 @@
             android:name=".services.CountdownService"
             android:foregroundServiceType="dataSync">
         </service>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="${TEST_ADMOB_APP_ID}"/>
     </application>
-
 </manifest>
